[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/Picture/3.png" type="Texture" id=1]
[ext_resource path="res://assets/Button/Play1.png" type="Texture" id=2]
[ext_resource path="res://Scene/Pilihan.gd" type="Script" id=3]
[ext_resource path="res://assets/Button/Play3.png" type="Texture" id=4]
[ext_resource path="res://assets/Button/Play2.png" type="Texture" id=5]
[ext_resource path="res://assets/Button/Back.png" type="Texture" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 601.0
texture = ExtResource( 1 )
expand = true

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 445.0
margin_top = 145.0
margin_right = 570.0
margin_bottom = 200.0

[node name="Button" type="Button" parent="."]
visible = false
margin_left = 306.0
margin_top = 147.0
margin_right = 431.0
margin_bottom = 199.0

[node name="Button2" type="Button" parent="."]
visible = false
margin_left = 589.0
margin_top = 146.0
margin_right = 718.0
margin_bottom = 199.0

[node name="Green" type="TextureButton" parent="."]
margin_left = 332.0
margin_top = 141.0
margin_right = 436.0
margin_bottom = 209.0
texture_normal = ExtResource( 2 )

[node name="Red" type="TextureButton" parent="."]
margin_left = 459.0
margin_top = 140.0
margin_right = 563.0
margin_bottom = 208.0
texture_normal = ExtResource( 4 )

[node name="Sand" type="TextureButton" parent="."]
margin_left = 583.0
margin_top = 142.0
margin_right = 687.0
margin_bottom = 210.0
texture_normal = ExtResource( 5 )

[node name="Back" type="TextureButton" parent="."]
margin_left = 908.0
margin_top = 22.0
margin_right = 1000.0
margin_bottom = 94.0
texture_normal = ExtResource( 6 )

[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Green" to="." method="_on_Green_pressed"]
[connection signal="pressed" from="Red" to="." method="_on_Red_pressed"]
[connection signal="pressed" from="Sand" to="." method="_on_Sand_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
